--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,5 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: check go version 
-        run: go version
-
+      - name: Run test
+        run: go test ./...
