--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Run test
         run: go test ./... -cover
 
-      - name: style
+      - name: Style
         run: test -z $(go fmt ./...)
